examples/c/error-codes/violates-constraint/fatal/CV-CER1-bad-static.output
CV-CER1-bad-static.c:16:2: error: cannot take the address of an rvalue of type 'struct node *'
 &(f().p);
 ^ ~~~~~
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-WpofP/pp-UUI43.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
